tests/sksl/errors/VertexEarlyReturn.glsl
### Compilation failed:

error: 3: early returns from vertex programs are not supported
1 error
